<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_title">Chat</string>
    <string name="login_title">Login</string>
    <string name="animation_title">Animation</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOG IN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="response_code_title">"Code: "</string>
    <string name="response_message_title">"Message: "</string>
    <string name="response_time_title">"Duration (in ms): "</string>
    <string name="fade_button_title">FADE IN</string>

</resources>
