<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="214dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="214dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_chat"
            android:drawablePadding="16dp"
            android:onClick="onChatClicked"
            android:text="@string/chat_button"
            android:textAlignment="viewStart"
            android:textColor="@color/chat_text"
            android:textSize="@dimen/button_text_size"
            android:alpha="0.8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:onClick="onLoginClicked"
            android:text="@string/login_button"
            android:textAlignment="viewStart"
            android:textColor="@color/chat_text"
            android:textSize="@dimen/button_text_size"
            android:alpha="0.8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button"
            android:drawableStart="@drawable/ic_animation"
            android:drawablePadding="16dp"
            android:onClick="onAnimationClicked"
            android:text="@string/animation_button"
            android:textAlignment="viewStart"
            android:textColor="@color/chat_text"
            android:textSize="@dimen/button_text_size"
            android:alpha="0.8"/>

    </LinearLayout>

</RelativeLayout>
