<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/input_field_text_size"
            android:textColor="@color/chat_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/input_field_text_size"
            android:textColor="@color/chat_text"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_address" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:background="@color/button_blue"
            android:text="@string/login_button"
            android:textColor="@color/background"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>